[B]1.9.15:[/B]
- fix all archive tv and radio
- add tv archive A-Z title, info
[B]1.9.14:[/B]
- fix tv episode
[B]1.9.13:[/B]
- added live STVR
[B]1.9.12:[/B]
- fix radio live
[B]1.9.11:[/B]
- upd hostname
- fix urls
- fix tv 24 live name
- fix radio archive A-Z
- fix radio extra archive vzdelavanie
[B]1.9.10:[/B]
- fix calendar in A-Z tv archive
[B]1.9.9:[/B]
- add readme.md
- upd code
[B]1.9.8:[/B]
- fix video archive Date
[B]1.9.7:[/B]
- fix version script.module.stream.resolver
[B]1.9.6:[/B]
- add support Kodi 20
[B]1.9.5:[/B]
- fix video archive Date
[B]1.9.4:[/B]
- added radio archive Extra
- added radio archive Plus
[B]1.9.3:[/B]
- added radio live
- added radio archive
- added support Kodi 18
[B]1.9.2:[/B]
- added RTVS Sport
- added info and img to Live
- fixed archive by Date and 
- added descriptions archive by Date
- fixed settings menu
[B]1.9.0:[/B]
- Kodi 19 Matrix update
[B]1.8.0:[/B]
- Kodi 18 Leia update
- streams from archive was stuttering due ffmpeg bug, solved with InputStream Adaptive
[B]1.0.8:[/B]
- ???
[B]1.0.7:[/B]
- added all live streams
- default quality option is set back to always ask
[B]1.0.6:[/B]
- fix alphabet range to include shows starting with Z/z, thanks to @pokopt
[B]1.0.5:[/B]
- don't use dynamic streaming
- added quality option
- default quality is 480p for smooth playback
[B]1.0.4:[/B]
- fixed listing
- fixed video resolving
- removed top, new categories
[B]1.0.3:[/B]
- added date listing
- added related videos listing to context menu
[B]1.0.0:[/B]
Initial version